tests/call/instance.rz
struct Foo {}

var foo = Foo()
foo() // error: only functions and structures are callable